update gradle, fixes for mac